--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
